<resources>
    <string name="app_name">Source_transition_predictive_back_cancel_ghost_view</string>
    <string name="instructions_source">Click on the above image to navigate to the destination fragment.</string>
    <string name="instructions_destination">Start a predictive back but cancel it. Then tap the text and you\'ll trigger the Toast on the previous fragment because the ghost view is still hanging around.</string>
    <string name="title_source">Source Fragment</string>
    <string name="button_text">Show Toast</string>
    <string name="toast_text">You clicked the ghost button</string>
    <string name="title_destination">Destination Fragment</string>
    <string name="android_logo_description">Android logo</string>
</resources>